# AI-News-Alert-System

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  browser.py  cache.py  config.py  custom_data_sources.py  database.py  docker-compose.debug.yml  docker-compose.yaml  driver_killer.py  logging_config.py  mailsender.py  main.py  pyproject.toml  selenium_health_check.py  test_email_output.html
ai-agents/: news_summarizer.py
ai_agents/: __init__.py  ai_email_copywriter.py  news_summarizer.py
models/: __init__.py  news_alert_record.py  news_models.py
prompts_templates/: ai_email_copywriter_prompt.md  news_summarizer_prompt.md  news_summarizer_request.md
scrapers/: __init__.py  guncelkesintiler_scraper.py  search_scraper.py  uedas_scraper.py
tasks/: __init__.py  ai_notifier_task.py  base_task.py  guncelkesintiler_task.py  news_search_task.py  uedas_task.py
tests/: __init__.py  mail_sender_test.py  test_sentry.py
tools/: __init__.py  web_search_tool.py  web_url_fetcher.py
utils/: __init__.py  driver_killer.py
